--- a/raiz/modelo.html
+++ b/raiz/modelo.html
@@ -9,11 +9,11 @@
 </head> 
 <body> 
     <header>
-        <h1>Hora do Dia</h1>
+        <h1>Título</h1>
     </header>
     <section>
-        <div id="msg"> >
-            
+        <div>
+
         </div>
         <div>
 
