--- a/raiz/hora.html
+++ b/raiz/hora.html
@@ -7,16 +7,17 @@
     <title> Modelo de Exercício </title>
     <link rel="stylesheet" href="estilo.css">
 </head> 
-<body> 
+<body onload="carregar( )"> 
     <header>
         <h1>Hora do Dia</h1>
     </header>
     <section>
-        <div id="msg"> >
+        <div id="msg">
+            aqui vai aparecer a mensagem...
             
         </div>
-        <div>
-
+        <div id="foto">
+            <img id="imagem" src="DIA DIA.png" alt="Foto do Dia"
         </div>
     </section>
     <footer>
